--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-session": "^1.18.1",
+    "moment": "^2.30.1",
     "mysql2": "^3.14.1",
     "nodemon": "^3.1.10",
     "passport": "^0.7.0",
