--- a/backend/package.json
+++ b/backend/package.json
@@ -11,14 +11,18 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.9.0",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-session": "^1.18.1",
+    "libphonenumber-js": "^1.12.7",
     "moment": "^2.30.1",
     "mysql2": "^3.14.1",
     "nodemon": "^3.1.10",
     "passport": "^0.7.0",
-    "passport-google-oauth2": "^0.2.0"
+    "passport-google-oauth2": "^0.2.0",
+    "validator": "^13.15.0"
   }
 }
