--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,11 +13,13 @@
     "@tailwindcss/vite": "^4.1.5",
     "axios": "^1.9.0",
     "bootstrap": "^5.3.6",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.509.0",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.5.3",
     "swiper": "^11.2.6",
     "tailwindcss": "^4.1.5"
