--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-session": "^1.18.1",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "libphonenumber-js": "^1.12.7",
     "moment": "^2.30.1",
@@ -25,6 +26,7 @@
     "nodemon": "^3.1.10",
     "passport": "^0.7.0",
     "passport-google-oauth2": "^0.2.0",
+    "path": "^0.12.7",
     "validator": "^13.15.0"
   }
 }
