--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "moment": "^2.30.1",
     "mysql2": "^3.14.1",
     "node-cron": "^4.1.0",
+    "nodemailer": "^7.0.3",
     "nodemon": "^3.1.10",
     "passport": "^0.7.0",
     "passport-google-oauth2": "^0.2.0",
